fix: scroll modal when too large

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -10,3 +10,10 @@
 .ReactModal__Overlay--before-close {
     opacity: 0;
 }
+
+.ReactModal__Body--open {
+    overflow: hidden;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
